--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "woodenpin",
+  "name": "woodenpin-official",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
-    "start": "next start",
+    "dev": "next dev",
     "build": "next build",
-    "dev": "next dev"
+    "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.17",
+    "framer-motion": "^11.0.0",
     "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.5"
   }
 }
