--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app/page.jsx", "use": "@vercel/node" }
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/app/page.jsx" }
-  ]
+  "framework": "nextjs"
 }
